# angularFirstTrainProject

./: README.md
client/: angular.json  package-lock.json  package.json
client/src/: index.html
client/src/app/: app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
client/src/app/http-interceptors/: log-interceptor.ts  token-interceptor.ts
client/src/app/nav/: nav.component.css  nav.component.html  nav.component.ts
client/src/app/routes/auth/sing-in/: sing-in.component.css  sing-in.component.html  sing-in.component.spec.ts  sing-in.component.ts
client/src/app/routes/auth/sing-up/: sing-up.component.spec.ts
client/src/app/shared/directives/: nowhitespaces-text.directive.spec.ts  nowhitespaces-text.directive.ts  trim-text.directive.spec.ts  trim-text.directive.ts
client/src/app/shared/interfaces/: token.ts  user.ts
client/src/app/shared/services/: auth.service.spec.ts  auth.service.ts
client/src/app/testing/: factories.ts
client/src/app/utils/: parse-token.ts
client/src/styles/: main.css  typography.css
server/: .gitignore  pyproject.toml
server/auth_api/: serializers.py  tests.py  urls.py  views.py
server/core/: settings.py  urls.py
