[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Pugavkomm <slavapugavko2@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = {extras = ["crypto"], version = "^5.3.1"}
black = "^24.10.0"
isort = "^5.13.2"
django-cors-headers = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length=120

[tool.isort]
profile='black'